# EdelPacta

./: .env.example  .gitignore  .~lock.EdelPacta_Hackathon_Presentation.odp#  CLAUDE.md  EdelPacta_Hackathon_Presentation.odp  EdelPacta_Hackathon_Presentation.pptx  LICENSE  README.md  deploy.sh  docker-compose.yml  generate_presentation.py  xrpl_doc.md
backend/: Dockerfile  package.json
backend/src/: index.ts  logger.ts
backend/src/routes/: escrow.ts  ipfs.ts  kyc.ts  nft.ts
backend/src/scripts/: setup-issuer.ts
backend/src/services/: escrowService.ts  kycService.ts  xrplService.ts
contract/: Cargo.toml  Dockerfile  build-devnet.sh  my_contract_devnet.wasm
contract/src/: lib.rs
frontends/buyer/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontends/buyer/src/: App.tsx  index.css  logger.ts  main.tsx
frontends/buyer/src/api/: escrow.ts  kyc.ts  nft.ts
frontends/buyer/src/components/: AcceptAndFinalizeEscrow.tsx  AcceptNft.tsx  BuyerInfo.tsx  Copyable.tsx  EscrowCreate.tsx  EscrowFinish.tsx  KYCGate.tsx  OwnedNFTs.tsx  PendingEscrows.tsx  SettleAndAccept.tsx  Stepper.tsx
frontends/buyer/src/context/: ToastContext.tsx
frontends/buyer/src/hooks/: useCopy.ts  useKYC.ts  useWallet.ts
frontends/notary/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontends/notary/src/: App.tsx  constants.ts  index.css  main.tsx  vite-env.d.ts
frontends/notary/src/api/: kyc.ts  nft.ts
frontends/notary/src/components/: KYCGate.tsx  (+4 more)
frontends/shared/src/: logger.ts
nginx/: edelpacta.conf
scripts/: init-wallet.ts
(+15 files in other folders)
